# src/libs/CursorAgents/Generated/CursorAgents.JsonSerializerContextTypes.g.cs
@@ -68,159 +68,187 @@ namespace CursorAgents
         /// <summary>
         /// 
         /// </summary>
-        public global::CursorAgents.AgentSummary? Type10 { get; set; }
+        public global::CursorAgents.McpAuth? Type10 { get; set; }
         /// <summary>
         /// 
         /// </summary>
-        public global::CursorAgents.AgentSummaryStatus? Type11 { get; set; }
+        public global::System.Collections.Generic.IList<string>? Type11 { get; set; }
         /// <summary>
         /// 
         /// </summary>
-        public global::System.DateTime? Type12 { get; set; }
+        public global::CursorAgents.StdioMcpServer? Type12 { get; set; }
         /// <summary>
         /// 
         /// </summary>
-        public global::CursorAgents.Agent? Type13 { get; set; }
+        public global::CursorAgents.StdioMcpServerType? Type13 { get; set; }
         /// <summary>
         /// 
         /// </summary>
-        public global::CursorAgents.AgentVariant2? Type14 { get; set; }
+        public global::System.Collections.Generic.Dictionary<string, string>? Type14 { get; set; }
         /// <summary>
         /// 
         /// </summary>
-        public global::System.Collections.Generic.IList<global::CursorAgents.RepoConfig>? Type15 { get; set; }
+        public global::CursorAgents.RemoteMcpServer? Type15 { get; set; }
         /// <summary>
         /// 
         /// </summary>
-        public bool? Type16 { get; set; }
+        public global::CursorAgents.RemoteMcpServerType? Type16 { get; set; }
         /// <summary>
         /// 
         /// </summary>
-        public global::CursorAgents.Run? Type17 { get; set; }
+        public global::CursorAgents.McpServer? Type17 { get; set; }
         /// <summary>
         /// 
         /// </summary>
-        public global::CursorAgents.RunStatus? Type18 { get; set; }
+        public global::CursorAgents.AgentSummary? Type18 { get; set; }
         /// <summary>
         /// 
         /// </summary>
-        public global::CursorAgents.CreateAgentRequest? Type19 { get; set; }
+        public global::CursorAgents.AgentSummaryStatus? Type19 { get; set; }
         /// <summary>
         /// 
         /// </summary>
-        public global::CursorAgents.CreateAgentRequestPrompt? Type20 { get; set; }
+        public global::System.DateTime? Type20 { get; set; }
         /// <summary>
         /// 
         /// </summary>
-        public global::System.Collections.Generic.IList<global::CursorAgents.Image>? Type21 { get; set; }
+        public global::CursorAgents.Agent? Type21 { get; set; }
         /// <summary>
         /// 
         /// </summary>
-        public global::System.Collections.Generic.Dictionary<string, string>? Type22 { get; set; }
+        public global::CursorAgents.AgentVariant2? Type22 { get; set; }
         /// <summary>
         /// 
         /// </summary>
-        public global::CursorAgents.AgentMode? Type23 { get; set; }
+        public global::System.Collections.Generic.IList<global::CursorAgents.RepoConfig>? Type23 { get; set; }
         /// <summary>
         /// 
         /// </summary>
-        public global::CursorAgents.CreateRunRequest? Type24 { get; set; }
+        public bool? Type24 { get; set; }
         /// <summary>
         /// 
         /// </summary>
-        public global::CursorAgents.CreateRunRequestPrompt? Type25 { get; set; }
+        public global::CursorAgents.Run? Type25 { get; set; }
         /// <summary>
         /// 
         /// </summary>
-        public global::CursorAgents.CreateAgentResponse? Type26 { get; set; }
+        public global::CursorAgents.RunStatus? Type26 { get; set; }
         /// <summary>
         /// 
         /// </summary>
-        public global::CursorAgents.CreateRunResponse? Type27 { get; set; }
+        public global::CursorAgents.CreateAgentRequest? Type27 { get; set; }
         /// <summary>
         /// 
         /// </summary>
-        public global::CursorAgents.ListAgentsResponse? Type28 { get; set; }
+        public global::CursorAgents.CreateAgentRequestPrompt? Type28 { get; set; }
         /// <summary>
         /// 
         /// </summary>
-        public global::System.Collections.Generic.IList<global::CursorAgents.AgentSummary>? Type29 { get; set; }
+        public global::System.Collections.Generic.IList<global::CursorAgents.Image>? Type29 { get; set; }
         /// <summary>
         /// 
         /// </summary>
-        public global::CursorAgents.ListRunsResponse? Type30 { get; set; }
+        public global::System.Collections.Generic.IList<global::CursorAgents.McpServer>? Type30 { get; set; }
         /// <summary>
         /// 
         /// </summary>
-        public global::System.Collections.Generic.IList<global::CursorAgents.Run>? Type31 { get; set; }
+        public global::CursorAgents.AgentMode? Type31 { get; set; }
         /// <summary>
         /// 
         /// </summary>
-        public global::CursorAgents.IdResponse? Type32 { get; set; }
+        public global::CursorAgents.CreateRunRequest? Type32 { get; set; }
         /// <summary>
         /// 
         /// </summary>
-        public global::CursorAgents.Artifact? Type33 { get; set; }
+        public global::CursorAgents.CreateRunRequestPrompt? Type33 { get; set; }
         /// <summary>
         /// 
         /// </summary>
-        public long? Type34 { get; set; }
+        public global::CursorAgents.CreateAgentResponse? Type34 { get; set; }
         /// <summary>
         /// 
         /// </summary>
-        public global::CursorAgents.ListArtifactsResponse? Type35 { get; set; }
+        public global::CursorAgents.CreateRunResponse? Type35 { get; set; }
         /// <summary>
         /// 
         /// </summary>
-        public global::System.Collections.Generic.IList<global::CursorAgents.Artifact>? Type36 { get; set; }
+        public global::CursorAgents.ListAgentsResponse? Type36 { get; set; }
         /// <summary>
         /// 
         /// </summary>
-        public global::CursorAgents.DownloadArtifactResponse? Type37 { get; set; }
+        public global::System.Collections.Generic.IList<global::CursorAgents.AgentSummary>? Type37 { get; set; }
         /// <summary>
         /// 
         /// </summary>
-        public global::CursorAgents.ApiKeyInfo? Type38 { get; set; }
+        public global::CursorAgents.ListRunsResponse? Type38 { get; set; }
         /// <summary>
         /// 
         /// </summary>
-        public global::CursorAgents.ListModelsResponse? Type39 { get; set; }
+        public global::System.Collections.Generic.IList<global::CursorAgents.Run>? Type39 { get; set; }
         /// <summary>
         /// 
         /// </summary>
-        public global::System.Collections.Generic.IList<string>? Type40 { get; set; }
+        public global::CursorAgents.IdResponse? Type40 { get; set; }
         /// <summary>
         /// 
         /// </summary>
-        public global::CursorAgents.Repository? Type41 { get; set; }
+        public global::CursorAgents.Artifact? Type41 { get; set; }
         /// <summary>
         /// 
         /// </summary>
-        public global::CursorAgents.ListRepositoriesResponse? Type42 { get; set; }
+        public long? Type42 { get; set; }
         /// <summary>
         /// 
         /// </summary>
-        public global::System.Collections.Generic.IList<global::CursorAgents.Repository>? Type43 { get; set; }
+        public global::CursorAgents.ListArtifactsResponse? Type43 { get; set; }
         /// <summary>
         /// 
         /// </summary>
-        public global::CursorAgents.CreateSubTokenRequest? Type44 { get; set; }
+        public global::System.Collections.Generic.IList<global::CursorAgents.Artifact>? Type44 { get; set; }
         /// <summary>
         /// 
         /// </summary>
-        public object? Type45 { get; set; }
+        public global::CursorAgents.DownloadArtifactResponse? Type45 { get; set; }
         /// <summary>
         /// 
         /// </summary>
-        public global::CursorAgents.CreateSubTokenResponse? Type46 { get; set; }
+        public global::CursorAgents.ApiKeyInfo? Type46 { get; set; }
         /// <summary>
         /// 
         /// </summary>
-        public global::CursorAgents.Error? Type47 { get; set; }
+        public global::CursorAgents.ListModelsResponse? Type47 { get; set; }
         /// <summary>
         /// 
         /// </summary>
-        public global::CursorAgents.ErrorError1? Type48 { get; set; }
+        public global::CursorAgents.Repository? Type48 { get; set; }
+        /// <summary>
+        /// 
+        /// </summary>
+        public global::CursorAgents.ListRepositoriesResponse? Type49 { get; set; }
+        /// <summary>
+        /// 
+        /// </summary>
+        public global::System.Collections.Generic.IList<global::CursorAgents.Repository>? Type50 { get; set; }
+        /// <summary>
+        /// 
+        /// </summary>
+        public global::CursorAgents.CreateSubTokenRequest? Type51 { get; set; }
+        /// <summary>
+        /// 
+        /// </summary>
+        public object? Type52 { get; set; }
+        /// <summary>
+        /// 
+        /// </summary>
+        public global::CursorAgents.CreateSubTokenResponse? Type53 { get; set; }
+        /// <summary>
+        /// 
+        /// </summary>
+        public global::CursorAgents.Error? Type54 { get; set; }
+        /// <summary>
+        /// 
+        /// </summary>
+        public global::CursorAgents.ErrorError1? Type55 { get; set; }
 
         /// <summary>
         /// 
@@ -229,30 +257,34 @@ namespace CursorAgents
         /// <summary>
         /// 
         /// </summary>
-        public global::System.Collections.Generic.List<global::CursorAgents.RepoConfig>? ListType1 { get; set; }
+        public global::System.Collections.Generic.List<string>? ListType1 { get; set; }
         /// <summary>
         /// 
         /// </summary>
-        public global::System.Collections.Generic.List<global::CursorAgents.Image>? ListType2 { get; set; }
+        public global::System.Collections.Generic.List<global::CursorAgents.RepoConfig>? ListType2 { get; set; }
         /// <summary>
         /// 
         /// </summary>
-        public global::System.Collections.Generic.List<global::CursorAgents.AgentSummary>? ListType3 { get; set; }
+        public global::System.Collections.Generic.List<global::CursorAgents.Image>? ListType3 { get; set; }
         /// <summary>
         /// 
         /// </summary>
-        public global::System.Collections.Generic.List<global::CursorAgents.Run>? ListType4 { get; set; }
+        public global::System.Collections.Generic.List<global::CursorAgents.McpServer>? ListType4 { get; set; }
         /// <summary>
         /// 
         /// </summary>
-        public global::System.Collections.Generic.List<global::CursorAgents.Artifact>? ListType5 { get; set; }
+        public global::System.Collections.Generic.List<global::CursorAgents.AgentSummary>? ListType5 { get; set; }
         /// <summary>
         /// 
         /// </summary>
-        public global::System.Collections.Generic.List<string>? ListType6 { get; set; }
+        public global::System.Collections.Generic.List<global::CursorAgents.Run>? ListType6 { get; set; }
         /// <summary>
         /// 
         /// </summary>
-        public global::System.Collections.Generic.List<global::CursorAgents.Repository>? ListType7 { get; set; }
+        public global::System.Collections.Generic.List<global::CursorAgents.Artifact>? ListType7 { get; set; }
+        /// <summary>
+        /// 
+        /// </summary>
+        public global::System.Collections.Generic.List<global::CursorAgents.Repository>? ListType8 { get; set; }
     }
 }
